# documentdb-mcp

./: .bumpversion.cfg  .env.example  .gitignore  .pre-commit-config.yaml  .vulture_ignore  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  a2a.json  compose.yml  debug.Dockerfile  entrypoint.sh  index.html  mcp.compose.yml  mcp_config.json  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.specify/reports/: code_enhancement_report.md  summary.json
.specify/reports/documentdb-mcp/: results.json
.specify/specs/code-enhancement-20260512/: CHECKLIST.md  DRIFT_REPORT.md  spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260522/: spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260524/: spec.json  spec.md  tasks.json  tasks.md
concepts/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  deployment.md  index.md  installation.md  legacy_readme.md  overview.md  platform.md  usage.md
documentdb_mcp/: __init__.py  __main__.py  agent.py  agent_server.py  api_client.py  auth.py  documentdb_a2a.py  documentdb_agent.py  documentdb_agent.py.bak  documentdb_mcp.py  graph_config.py  mcp.py  mcp_config.json  mcp_server.py  mcp_server.py.debug  tools.py  utils.py
documentdb_mcp/agent/: HEARTBEAT.md  IDENTITY.md  templates.py
documentdb_mcp/agent_data/: IDENTITY.md  MCP_AGENTS.md  NODE_AGENTS.md  knowledge_graph.db  knowledge_graph.db.wal  mcp_config.json  templates.py
documentdb_mcp/api/: __init__.py  api_client_analysis.py  api_client_base.py  api_client_crud.py  api_client_system.py  api_client_users.py
documentdb_mcp/mcp/: __init__.py  mcp_analysis.py  mcp_users.py
documentdb_mcp/prompts/: main_agent.json
documentdb_mcp/skills/documentdb-mcp-analysis/: SKILL.md
documentdb_mcp/skills/documentdb-mcp-collections/: SKILL.md
documentdb_mcp/skills/documentdb-mcp-crud/: SKILL.md
documentdb_mcp/skills/documentdb-mcp-system/: SKILL.md
documentdb_mcp/skills/documentdb-mcp-users/: SKILL.md
documentdb_mcp/skills/documentdb-starter/: SKILL.md
documentdb_mcp/tools/: __init__.py  collections.py  crud.py  system.py
installation/: index.html
legacy_readme/: index.html
overview/: index.html
platform/: index.html
scripts/: verify_api_integration.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_api_base.py  test_api_client_analysis.py  test_api_client_crud.py  test_api_client_system.py  test_api_client_users.py  test_concept_parity.py  test_documentdb_brute_force.py  test_init_auth.py  test_init_dynamics.py  test_main_coverage.py  test_mcp_server.py  test_startup.py
usage/: index.html
