[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "documentdb-mcp"
version = "0.1.17"
description = "DocumentDB MCP Server & A2A Server. DocumentDB is a MongoDB compatible open source document database built on PostgreSQL."
readme = "README.md"
authors = [{ name = "Audel Rouhi", email = "knucklessg1@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: Public Domain",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "agent-utilities[mcp]>=0.2.4",
    "pymongo>=4.0"
]

[project.optional-dependencies]
agent = [
    "agent-utilities[agent,logfire]>=0.2.4",
]

all = [
    "agent-utilities[mcp,agent,logfire]>=0.2.4",
]

[project.scripts]
documentdb-mcp = "documentdb_mcp.mcp:mcp_server"
documentdb-agent = "documentdb_mcp.agent:agent_server"

[tool.setuptools.package-data]
documentdb_mcp = [ "mcp_config.json", "skills/**", "agent/**",]

[tool.setuptools.packages.find]
where = ["."]
